@@ -2,6 +2,7 @@ v0.3.6:
     - Made so the Retry prompt shows up immediately when falling in a pit and not using !fast_prompt = 1.
     - Fixed cursor and letters outlines when not using the prompt box (now they're the same as in GFX28).
     - Added !disable_hurry_up option to disable the tempo hike effect when reaching 100 seconds in a level.
+    - Added !pipe_entrance_freeze option to force lock/unlock sprites during pipe entrances and avoid possible inconsistencies of the vanilla method (default is vanilla for consistency with previous versions).
 
 v0.3.5:
     - Fixed insertion issue in case another UberASM code uses nested namespaces, for example Dynamic Z (thanks to Alex for reporting this).
